you can now get through the onboarding screens
the switches don't do anything, but now it shows up the first time you open the app, and you can click continue all the way through.

--- a/Expedition/OnboardingVCs/Onboarding.storyboard
+++ b/Expedition/OnboardingVCs/Onboarding.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +11,7 @@
         <!--Onb1 View Controller-->
         <scene sceneID="Aoa-6x-MA4">
             <objects>
-                <viewController storyboardIdentifier="customiseStoryboard" id="ieB-mx-4LC" customClass="Onb1ViewController" customModule="Expedition" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="customizeStoryboard" id="ieB-mx-4LC" customClass="Onb1ViewController" customModule="Expedition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rN7-lk-5QD">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -306,10 +306,10 @@
             </objects>
             <point key="canvasLocation" x="230" y="-202"/>
         </scene>
-        <!--View Controller-->
+        <!--Onb4 View Controller-->
         <scene sceneID="jwx-AA-rTj">
             <objects>
-                <viewController id="BWE-GQ-arh" sceneMemberID="viewController">
+                <viewController id="BWE-GQ-arh" customClass="Onb4ViewController" customModule="Expedition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JIQ-7V-gzE">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -342,7 +342,7 @@
                                 <state key="normal" image="continueBtn"/>
                                 <state key="highlighted" image="continueBtn-P"/>
                                 <connections>
-                                    <action selector="continuePressed:" destination="dv2-97-Pdi" eventType="touchUpInside" id="S6B-Yk-IeL"/>
+                                    <action selector="continuePressed:" destination="BWE-GQ-arh" eventType="touchUpInside" id="7CI-YT-dOm"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -364,7 +364,6 @@
                     <navigationItem key="navigationItem" id="Cz2-oD-aVp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bHp-YM-6V1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="dv2-97-Pdi" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1583" y="-203"/>
         </scene>
